# dependency-files-only

./: README.md
csharp/: dvcsharp-core-api.csproj
go/: go.mod  go.sum
java/: pom.xml
javascript/nested/: package.json
python/: Pipfile  README.md  pyproject.toml
python/requirements-by-env/: README.md  dev.txt  production.txt
